# ClipSync

./: .gitignore  README.md  package-lock.json  package.json  spec.md  updates.md
docs/: ffmpeg-sidecar-reference.md  tauri-v2-reference.md  windows-capture-reference.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  capture.rs  clip_store.rs  encoder.rs  lib.rs  main.rs  replay_buffer.rs
src/components/: ClipDetail.tsx  ClipLibrary.tsx  Settings.tsx  Sidebar.tsx  TopBar.tsx
stitch_clipsync_desktop_interface/clip_detail_clipsync/: code.html
stitch_clipsync_desktop_interface/library_clipsync/: code.html
stitch_clipsync_desktop_interface/obsidian_neon/: DESIGN.md
stitch_clipsync_desktop_interface/settings_clipsync/: code.html
