[package]
name = "clipsync"
version = "0.1.0"
description = "Privacy-first gameplay clip recorder"
authors = ["you"]
edition = "2021"

[lib]
name = "clipsync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# Screen capture (WGC API)
windows-capture = "2.0.0"

# FFmpeg encoding (subprocess approach)
ffmpeg-sidecar = "2"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1"

# Directories
dirs-next = "2"

# Audio capture (WASAPI loopback)
wasapi = "0.23"
